--- a/movies/app/views/layouts/application.html.erb
+++ b/movies/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <header>
   <%= link_to 'Movies', movies_path %>
   <%= link_to 'Actors', actors_path %>
+  <%= link_to 'Roles', roles_path %>
 </header>
 <%= yield %>
 
