Adds character to each role

--- a/movies/app/views/roles/new.html.erb
+++ b/movies/app/views/roles/new.html.erb
@@ -14,6 +14,10 @@
 
 <%= form_for @role do |f| %>
   <div class="">
+    <%= f.label :character %>
+    <%= f.text_field :character %>
+  </div>
+  <div class="">
     <%= f.label :movie %>
     <%= f.collection_select :movie_id, Movie.all, :id, :title, prompt: true %>
   </div>
