--- a/movies/app/views/roles/index.html.erb
+++ b/movies/app/views/roles/index.html.erb
@@ -13,6 +13,9 @@
       <th>
         Actor
       </th>
+      <th>
+        Character
+      </th>
     </tr>
   </thead>
   <tbody>
@@ -24,7 +27,9 @@
         <td>
           <%= role.actor.full_name %>
         </td>
-
+        <td>
+          <%= role.character %>
+        </td>
       </tr>
     <% end %>
   </tbody>
