--- a/movies/app/views/movies/_form.html.erb
+++ b/movies/app/views/movies/_form.html.erb
@@ -1,5 +1,5 @@
 <% if @movie.errors.any? %>
-  <div class="errors">
+  <div class="alert alert-danger">
     <strong><%= pluralize @movie.errors.count, 'error' %> stopped you from getting your job done</strong>
     <ul>
       <% @movie.errors.full_messages.each do |msg| %>
@@ -11,11 +11,11 @@
 <% end %>
 
 <%= form_for @movie do |f| %>
-  <div class="">
+  <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
-  <div class="">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
