--- a/movies/app/views/roles/index.html.erb
+++ b/movies/app/views/roles/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Roles</h1>
 
-<p>
-  <%= link_to 'New Role', new_role_path %>
+<p class="text-right">
+  <%= link_to 'New Role', new_role_path, class: 'btn btn-default' %>
 </p>
 
-<table>
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>
