--- a/movies/app/views/layouts/application.html.erb
+++ b/movies/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
   <%= link_to 'Actors', actors_path %>
   <%= link_to 'Roles', roles_path %>
 </header>
-<%= yield %>
+<div class="container">
+  <%= yield %>
+  
+</div>
 
 </body>
 </html>
