--- a/movies/app/views/movies/show.html.erb
+++ b/movies/app/views/movies/show.html.erb
@@ -7,6 +7,6 @@
   <% end %>
 </ul>
 
-<%= link_to 'Edit', edit_movie_path(id: @movie.id) %>
+<%= link_to 'Edit', edit_movie_path(id: @movie.id), class: "btn btn-default" %>
 or
-<%= link_to 'Delete', movie_path(id: @movie.id), method: :delete, data: {confirm: "Are you sure?"} %>
+<%= link_to 'Delete', movie_path(id: @movie.id), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-danger" %>
